--- a/org/colloquium/ocene_2018.org
+++ b/org/colloquium/ocene_2018.org
@@ -4,98 +4,98 @@
 
 |   |    br. | br. indeksa | ime i prezime          | python | clojure | smalltalk | haskell | ukupno kol | projekat | test za 6 | ukupno |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
-|   |      1 | SW1/2014    | Žarko      Drageljević |    100 |   92.00 |           |         |     48.000 |          |           |    48. |
-|   |      2 | SW4/2014    | Vladimir   Inđić       |     90 |     100 |           |         |     47.500 |          |           |   47.5 |
-|   |      3 | SW10/2014   | Milana     Bečejac     |     80 |   92.00 |           |         |     43.000 |          |           |    43. |
-|   |      4 | SW56/2014   | Milan      Desančić    |    100 |   69.00 |           |         |     42.250 |          |           |  42.25 |
-|   |      5 | SW6/2014    | Helena     Zečević     |    100 |   92.00 |           |         |     48.000 |          |           |    48. |
-|   |      6 | SW7/2014    | Luka       Maletin     |    100 |     100 |           |         |     50.000 |          |           |    50. |
-|   |      7 | SW25/2014   | Aleksandar Nikolić     |     90 |   92.00 |           |         |     45.500 |          |           |   45.5 |
-|   |      8 | SW28/2014   | Nemanja    Brzak       |     80 |   46.00 |           |         |     31.500 |          |           |   31.5 |
+|   |      1 | SW1/2014    | Žarko      Drageljević |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
+|   |      2 | SW4/2014    | Vladimir   Inđić       |     90 |     100 |       100 |         |     72.500 |          |           |   72.5 |
+|   |      3 | SW10/2014   | Milana     Bečejac     |     80 |   92.00 |       100 |         |     68.000 |          |           |    68. |
+|   |      4 | SW56/2014   | Milan      Desančić    |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
+|   |      5 | SW6/2014    | Helena     Zečević     |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
+|   |      6 | SW7/2014    | Luka       Maletin     |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
+|   |      7 | SW25/2014   | Aleksandar Nikolić     |     90 |   92.00 |       100 |         |     70.500 |          |           |   70.5 |
+|   |      8 | SW28/2014   | Nemanja    Brzak       |     80 |   46.00 |       100 |         |     56.500 |          |           |   56.5 |
 |   |      9 | SW22/2014   | Marija     Kovačević   |        |         |           |         |      0.000 |          |           |     0. |
-|   |     10 | SW42/2014   | Jelena     Ilić        |    100 |     100 |           |         |     50.000 |          |           |    50. |
-|   |     11 | SW45/2014   | Drago      Stevanović  |    100 |     100 |           |         |     50.000 |          |           |    50. |
-|   |     12 | SW54/2014   | David      Vuletaš     |    100 |   80.50 |           |         |     45.125 |          |           | 45.125 |
-|   |     13 | SW31/2014   | Petar      Radošević   |    100 |     100 |           |         |     50.000 |          |           |    50. |
-|   |     14 | SW34/2014   | Luka       Mihajlović  |    100 |   92.00 |           |         |     48.000 |          |           |    48. |
-|   |     15 | SW37/2014   | Vojin      Pešalj      |    100 |     100 |           |         |     50.000 |          |           |    50. |
+|   |     10 | SW42/2014   | Jelena     Ilić        |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
+|   |     11 | SW45/2014   | Drago      Stevanović  |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
+|   |     12 | SW54/2014   | David      Vuletaš     |    100 |   80.50 |       100 |         |     70.125 |          |           | 70.125 |
+|   |     13 | SW31/2014   | Petar      Radošević   |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
+|   |     14 | SW34/2014   | Luka       Mihajlović  |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
+|   |     15 | SW37/2014   | Vojin      Pešalj      |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
 |   |     16 | SW58/2014   | Michael    Milinković  |        |         |           |         |      0.000 |          |           |     0. |
-|   |     17 | SW13/2014   | Katarina   Čukurov     |    100 |   69.00 |           |         |     42.250 |          |           |  42.25 |
-|   |     18 | SW94/2016   | Nikola     Garabandić  |    100 |   69.00 |           |         |     42.250 |          |           |  42.25 |
-|   |     19 | SW12/2014   | Ivana      Zeljković   |    100 |   92.00 |           |         |     48.000 |          |           |    48. |
-|   |     20 | SW33/2014   | Dejan      Zarić       |    100 |     100 |           |         |     50.000 |          |           |    50. |
-|   |     21 | SW32/2014   | Nikola     Lošić       |     90 |   92.00 |           |         |     45.500 |          |           |   45.5 |
-|   |     22 | SW11/2014   | Dragan     Vujanović   |    100 |   92.00 |           |         |     48.000 |          |           |    48. |
-|   |     23 | SW24/2014   | Acko       Spasić      |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     24 | SW47/2014   | Ana        Rudić       |     90 |   69.00 |           |         |     39.750 |          |           |  39.75 |
-|   |     25 | SW48/2014   | Novak      Marin       |     80 |   46.00 |           |         |     31.500 |          |           |   31.5 |
-|   |     26 | SW50/2014   | Vanja      Zorić       |     80 |   69.00 |           |         |     37.250 |          |           |  37.25 |
-|   |     27 | SW60/2014   | Dušan      Dudarin     |     30 |   46.00 |           |         |     19.000 |          |           |    19. |
-|   |     28 | SW17/2014   | Sandra     Rajanović   |     80 |   69.00 |           |         |     37.250 |          |           |  37.25 |
-|   |     29 | SW27/2014   | Nikolina   Radičić     |    100 |   80.50 |           |         |     45.125 |          |           | 45.125 |
-|   |     30 | SW38/2014   | Tatjana    Zdravković  |     80 |   23.00 |           |         |     25.750 |          |           |  25.75 |
-|   |     31 | SW89/2016   | Uroš       Jovanović   |    100 |   69.00 |           |         |     42.250 |          |           |   36.5 |
-|   |     32 | SW5/2014    | Stefan     Colić       |     90 |   69.00 |           |         |     39.750 |          |           |  39.75 |
-|   |     33 | SW15/2014   | Ognjen     Vlajić      |    100 |   80.50 |           |         |     45.125 |          |           | 45.125 |
-|   |     34 | SW21/2014   | Tomislav   Dobrički    |     90 |     100 |           |         |     47.500 |          |           |   47.5 |
-|   |     35 | SW53/2014   | Milan      Šalić       |    100 |   80.50 |           |         |     45.125 |          |           | 45.125 |
+|   |     17 | SW13/2014   | Katarina   Čukurov     |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
+|   |     18 | SW94/2016   | Nikola     Garabandić  |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
+|   |     19 | SW12/2014   | Ivana      Zeljković   |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
+|   |     20 | SW33/2014   | Dejan      Zarić       |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
+|   |     21 | SW32/2014   | Nikola     Lošić       |     90 |   92.00 |       100 |         |     70.500 |          |           |   70.5 |
+|   |     22 | SW11/2014   | Dragan     Vujanović   |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
+|   |     23 | SW24/2014   | Acko       Spasić      |    100 |         |         0 |         |     25.000 |          |           |    25. |
+|   |     24 | SW47/2014   | Ana        Rudić       |     90 |   69.00 |       100 |         |     64.750 |          |           |  64.75 |
+|   |     25 | SW48/2014   | Novak      Marin       |     80 |   46.00 |       100 |         |     56.500 |          |           |   56.5 |
+|   |     26 | SW50/2014   | Vanja      Zorić       |     80 |   69.00 |       100 |         |     62.250 |          |           |  62.25 |
+|   |     27 | SW60/2014   | Dušan      Dudarin     |     30 |   46.00 |       100 |         |     44.000 |          |           |    44. |
+|   |     28 | SW17/2014   | Sandra     Rajanović   |     80 |   69.00 |       100 |         |     62.250 |          |           |  62.25 |
+|   |     29 | SW27/2014   | Nikolina   Radičić     |    100 |   80.50 |       100 |         |     70.125 |          |           | 70.125 |
+|   |     30 | SW38/2014   | Tatjana    Zdravković  |     80 |   23.00 |       100 |         |     50.750 |          |           |  50.75 |
+|   |     31 | SW89/2016   | Uroš       Jovanović   |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
+|   |     32 | SW5/2014    | Stefan     Colić       |     90 |   69.00 |       100 |         |     64.750 |          |           |  64.75 |
+|   |     33 | SW15/2014   | Ognjen     Vlajić      |    100 |   80.50 |       100 |         |     70.125 |          |           | 70.125 |
+|   |     34 | SW21/2014   | Tomislav   Dobrički    |     90 |     100 |       100 |         |     72.500 |          |           |   72.5 |
+|   |     35 | SW53/2014   | Milan      Šalić       |    100 |   80.50 |       100 |         |     70.125 |          |           | 70.125 |
 |   |     36 | SW61/2015   | Stefan     Plazić      |        |         |           |         |      0.000 |          |           |     0. |
 |   |     37 | SW61/2014   | Mladen     Stajčić     |        |    0.00 |           |         |      0.000 |          |           |     0. |
 |   |     38 | SW62/2014   | Miodrag    Vilotijević |        |         |           |         |      0.000 |          |           |     0. |
 |   |     39 | SW63/2014   | Nemanja    Žunić       |        |         |           |         |      0.000 |          |           |     0. |
-|   |     40 | SW8/2014    | Ognjen     Francuski   |     80 |   92.00 |           |         |     43.000 |          |           |    43. |
-|   |     41 | SW16/2014   | Monika     Erdeg       |    100 |     100 |           |         |     50.000 |          |           |    50. |
-|   |     42 | SW26/2014   | Sara       Perić       |    100 |   80.50 |           |         |     45.125 |          |           | 45.125 |
-|   |     43 | SW29/2014   | Miloš      Pavlić      |    100 |   92.00 |           |         |     48.000 |          |           |    48. |
-|   |     44 | SW85/2017   | Aleksandar Đurić       |     90 |   69.00 |           |         |     39.750 |          |           |  39.75 |
-|   |     45 | SW86/2017   | Dara       Jovanović   |     70 |   80.50 |           |         |     37.625 |          |           | 37.625 |
-|   |     46 | SW90/2017   | Milica     Lazić       |    100 |   46.00 |           |         |     36.500 |          |           |   36.5 |
-|   |     47 | SW91/2017   | Nemanja    Đuričić     |     80 |   23.00 |           |         |     25.750 |          |           |  25.75 |
-|   |     48 | SW2/2014    | Noemi      Sabadoš     |    100 |   69.00 |           |         |     42.250 |          |           |  42.25 |
-|   |     49 | SW20/2014   | Nevena     Đerić       |    100 |   80.50 |           |         |     45.125 |          |           | 45.125 |
-|   |     50 | SW18/2014   | Radoš      Aćimović    |    100 |   69.00 |           |         |     42.250 |          |           |  42.25 |
-|   |     51 | SW43/2014   | Nevena     Lazarević   |    100 |     100 |           |         |     50.000 |          |           |    50. |
-|   |     52 | SW44/2014   | Sreten     Stokić      |    100 |   46.00 |           |         |     36.500 |          |           |   36.5 |
-|   |     53 | SW96/2016   | Filip      Jablanović  |     80 |   69.00 |           |         |     37.250 |          |           |  37.25 |
+|   |     40 | SW8/2014    | Ognjen     Francuski   |     80 |   92.00 |       100 |         |     68.000 |          |           |    68. |
+|   |     41 | SW16/2014   | Monika     Erdeg       |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
+|   |     42 | SW26/2014   | Sara       Perić       |    100 |   80.50 |       100 |         |     70.125 |          |           | 70.125 |
+|   |     43 | SW29/2014   | Miloš      Pavlić      |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
+|   |     44 | SW85/2017   | Aleksandar Đurić       |     90 |   69.00 |       100 |         |     64.750 |          |           |  64.75 |
+|   |     45 | SW86/2017   | Dara       Jovanović   |     70 |   80.50 |       100 |         |     62.625 |          |           | 62.625 |
+|   |     46 | SW90/2017   | Milica     Lazić       |    100 |   46.00 |       100 |         |     61.500 |          |           |   61.5 |
+|   |     47 | SW91/2017   | Nemanja    Đuričić     |     80 |   23.00 |     66.66 |         |     42.415 |          |           | 42.415 |
+|   |     48 | SW2/2014    | Noemi      Sabadoš     |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
+|   |     49 | SW20/2014   | Nevena     Đerić       |    100 |   80.50 |       100 |         |     70.125 |          |           | 70.125 |
+|   |     50 | SW18/2014   | Radoš      Aćimović    |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
+|   |     51 | SW43/2014   | Nevena     Lazarević   |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
+|   |     52 | SW44/2014   | Sreten     Stokić      |    100 |   46.00 |       100 |         |     61.500 |          |           |   61.5 |
+|   |     53 | SW96/2016   | Filip      Jablanović  |     80 |   69.00 |       100 |         |     62.250 |          |           |  62.25 |
 |   |     54 | SW36/2014   | Natalija   Bogdanović  |        |         |           |         |      0.000 |          |           |     0. |
-|   |     55 | SW3/2014    | Andreja    Isaković    |     90 |     100 |           |         |     47.500 |          |           |   47.5 |
-|   |     56 | SW23/2014   | Milica     Mlađenović  |     80 |   69.00 |           |         |     37.250 |          |           |  37.25 |
-|   |     57 | SW30/2014   | Filip      Savić       |    100 |   92.00 |           |         |     48.000 |          |           |    48. |
-|   |     58 | SW51/2014   | Aleksandar Savić       |    100 |     100 |           |         |     50.000 |          |           |    50. |
-|   |     59 | SW19/2014   | Stefan     Đurić       |    100 |   92.00 |           |         |     48.000 |          |           |    48. |
-|   |     60 | SW40/2014   | Miroslav   Kospić      |     50 |   92.00 |           |         |     35.500 |          |           |   35.5 |
-|   |     61 | SW41/2014   | Momir      Kostić      |    100 |   69.00 |           |         |     42.250 |          |           |  42.25 |
+|   |     55 | SW3/2014    | Andreja    Isaković    |     90 |     100 |       100 |         |     72.500 |          |           |   72.5 |
+|   |     56 | SW23/2014   | Milica     Mlađenović  |     80 |   69.00 |       100 |         |     62.250 |          |           |  62.25 |
+|   |     57 | SW30/2014   | Filip      Savić       |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
+|   |     58 | SW51/2014   | Aleksandar Savić       |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
+|   |     59 | SW19/2014   | Stefan     Đurić       |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
+|   |     60 | SW40/2014   | Miroslav   Kospić      |     50 |   92.00 |       100 |         |     60.500 |          |           |   60.5 |
+|   |     61 | SW41/2014   | Momir      Kostić      |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
 |   |     62 | SW19/2013   | Ivan       Mihajlov    |        |         |           |         |      0.000 |          |           |     0. |
 |   |     63 | SW92/2016   | Goran      Janković    |     70 |         |           |         |     17.500 |          |           |   17.5 |
-|   |     64 | SW87/2017   | Đorđe      Ilić        |    100 |   69.00 |           |         |     42.250 |          |           |  42.25 |
-|   |     65 | SW88/2017   | Nikola     Đurđević    |     40 |   23.00 |           |         |     15.750 |          |           |  15.75 |
-|   |     66 | SW89/2017   | Mirjana    Lakić       |      0 |   46.00 |           |         |     11.500 |          |           |   11.5 |
-|   |     67 | SW90/2016   | Stefan     Kikanović   |     70 |   92.00 |           |         |     40.500 |          |           |   40.5 |
-|   |     68 | SW91/2016   | Vladislav  Milivojević |    100 |   57.50 |           |         |     39.375 |          |           | 39.375 |
+|   |     64 | SW87/2017   | Đorđe      Ilić        |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
+|   |     65 | SW88/2017   | Nikola     Đurđević    |     40 |   23.00 |       100 |         |     40.750 |          |           |  40.75 |
+|   |     66 | SW89/2017   | Mirjana    Lakić       |      0 |   46.00 |     66.66 |         |     28.165 |          |           | 28.165 |
+|   |     67 | SW90/2016   | Stefan     Kikanović   |     70 |   92.00 |       100 |         |     65.500 |          |           |   65.5 |
+|   |     68 | SW91/2016   | Vladislav  Milivojević |    100 |   57.50 |     66.66 |         |     56.040 |          |           |  56.04 |
 |   |     69 | SW93/2016   | Novica     Nikolić     |        |         |           |         |      0.000 |          |           |     0. |
 |   |     70 | SW49/2013   | Ivan       Vujić       |        |   46.00 |           |         |     11.500 |          |           |   11.5 |
-|   |     71 | SW58/2013   | Branko     Karać       |     80 |   46.00 |           |         |     31.500 |          |           |   31.5 |
+|   |     71 | SW58/2013   | Branko     Karać       |     80 |   46.00 |     66.66 |         |     48.165 |          |           | 48.165 |
 |   |     72 | SW97/2016   | Jovan      Miletić     |        |         |           |         |      0.000 |          |           |     0. |
 |   |     73 | SW44/2013   | Injac      Branko      |        |         |           |         |      0.000 |          |           |     0. |
 |   |     74 | SW54/2013   | Milović    Aleksa      |     40 |         |           |         |     10.000 |          |           |    10. |
 |   |     75 | SW60/2013   | Majkić     Miloš       |     20 |   23.00 |           |         |     10.750 |          |           |  10.75 |
 |   |     76 | SW64/2014   | Dunja      Krga        |        |         |           |         |      0.000 |          |           |     0. |
 |   |     77 | SW37/2013   | Katarina   Cerović     |        |         |           |         |      0.000 |          |           |     0. |
-|   |     78 | SW59/2013   | Nikola Dakić           |     60 |   69.00 |           |         |     32.250 |          |           |  32.25 |
-|   |     79 | SL25/2014   | Jovica Mitrović        |     60 |   23.00 |           |         |     20.750 |          |           |  20.75 |
-|   |     80 | SL8/2014    | Danka Vasić            |     50 |   46.00 |           |         |     24.000 |          |           |    24. |
-|   |     81 | SL40/2014   | Jelena Popović         |    100 |   69.00 |           |         |     42.250 |          |           |  42.25 |
+|   |     78 | SW59/2013   | Nikola Dakić           |     60 |   69.00 |     66.66 |         |     48.915 |          |           | 48.915 |
+|   |     79 | SL25/2014   | Jovica Mitrović        |     60 |   23.00 |     66.66 |         |     37.415 |          |           | 37.415 |
+|   |     80 | SL8/2014    | Danka Vasić            |     50 |   46.00 |     66.66 |         |     40.665 |          |           | 40.665 |
+|   |     81 | SL40/2014   | Jelena Popović         |    100 |   69.00 |     86.66 |         |     63.915 |          |           | 63.915 |
 |   |     82 | SW41/2013   | Miljana Vinokić        |     40 |         |           |         |     10.000 |          |           |    10. |
-|   |     83 | ???         | Vuk Vladisavljević     |     80 |   92.00 |           |         |     43.000 |          |           |    43. |
-|   |     84 | SL10/2014   | Veljko Radić           |     60 |   69.00 |           |         |     32.250 |          |           |  32.25 |
-|   |     85 | ???         | Sandra Todorović       |     60 |   23.00 |           |         |     20.750 |          |           |  20.75 |
+|   |     83 | ???         | Vuk Vladisavljević     |     80 |   92.00 |       100 |         |     68.000 |          |           |    68. |
+|   |     84 | SL10/2014   | Veljko Radić           |     60 |   69.00 |     53.33 |         |     45.583 |          |           | 45.583 |
+|   |     85 | ???         | Sandra Todorović       |     60 |   23.00 |       100 |         |     45.750 |          |           |  45.75 |
 |   |     86 | SW53/2013   | Predrag    Falčić      |        |         |           |         |      0.000 |          |           |     0. |
 | ^ | brStud |             |                        |        |         |           |         |            |          |           |        |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
-|   |        | Prosečno    |                        | 84.507 |  72.391 |     0.000 |   0.000 |     31.962 |    0.000 |           | 31.895 |
-|   |        | Položilo    | 0                      |        |         |           |         |            |          |           |        |
+|   |        | Prosečno    |                        | 84.507 |  72.391 |    94.129 |   0.000 |     50.295 |    0.000 |           | 50.295 |
+|   |        | Položilo    | 55                     |        |         |           |         |            |          |           |        |
 | ^ |        |             | polozilo               |        |         |           |         |            |          |           |        |
-|   |        | Prolaznost  | 0.000                  |        |         |           |         |            |          |           |        |
+|   |        | Prolaznost  | 0.640                  |        |         |           |         |            |          |           |        |
 #+TBLFM: @>$4=$polozilo/$brStud;%.3f::@>>>>$12=vmean(@2$12..@87$12);%.3f::@>>>>$5=vmean(@2$5..@87$5);%.3f::@>>>>$6=vmean(@2$6..@87$6);%.3f::@>>>>$7=vmean(@2$7..@87$7);%.3f::@>>>>$8=vmean(@2$8..@87$8);%.3f::@>>>>$9=vmean(@2$9..@87$9);%.3f::@>>>>$10=vmean(@2$10..@87$10);%.3f::@>>>$4=vcount(map(<if(gt(#1, 55), 1, [])>, @2$9..@87$9))::@2$2..@87$2=@# - 1::@2$9..@87$9=vsum($5..$8)/4;%.3f::@2$12..@87$12=vsum($9..$11)
 #+TBLFM: @2$6..@87$6='(ntp/mul-const $6 1.15)
 
