--- a/org/colloquium/ocene_2018.org
+++ b/org/colloquium/ocene_2018.org
@@ -4,13 +4,13 @@
 
 |   |    br. | br. indeksa | ime i prezime          | python | clojure | smalltalk | haskell | ukupno kol | projekat | test za 6 | ukupno |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
-|   |      1 | SW1/2014    | Žarko      Drageljević |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
-|   |      2 | SW4/2014    | Vladimir   Inđić       |     90 |     100 |       100 |         |     72.500 |          |           |   72.5 |
-|   |      3 | SW10/2014   | Milana     Bečejac     |     80 |   92.00 |       100 |         |     68.000 |          |           |    68. |
-|   |      4 | SW56/2014   | Milan      Desančić    |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
-|   |      5 | SW6/2014    | Helena     Zečević     |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
-|   |      6 | SW7/2014    | Luka       Maletin     |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
-|   |      7 | SW25/2014   | Aleksandar Nikolić     |     90 |   92.00 |       100 |         |     70.500 |          |           |   70.5 |
+|   |      1 | SW1/2014    | Žarko      Drageljević |    100 |   92.00 |       100 |     100 |     98.000 |          |           |    98. |
+|   |      2 | SW4/2014    | Vladimir   Inđić       |     90 |     100 |       100 |     100 |     97.500 |          |           |   97.5 |
+|   |      3 | SW10/2014   | Milana     Bečejac     |     80 |   92.00 |       100 |     100 |     93.000 |          |           |    93. |
+|   |      4 | SW56/2014   | Milan      Desančić    |    100 |   69.00 |       100 |     100 |     92.250 |          |           |  92.25 |
+|   |      5 | SW6/2014    | Helena     Zečević     |    100 |   92.00 |       100 |     100 |     98.000 |          |           |    98. |
+|   |      6 | SW7/2014    | Luka       Maletin     |    100 |     100 |       100 |     100 |    100.000 |          |           |   100. |
+|   |      7 | SW25/2014   | Aleksandar Nikolić     |     90 |   92.00 |       100 |     100 |     95.500 |          |           |   95.5 |
 |   |      8 | SW28/2014   | Nemanja    Brzak       |     80 |   46.00 |       100 |         |     56.500 |          |           |   56.5 |
 |   |      9 | SW22/2014   | Marija     Kovačević   |        |         |           |         |      0.000 |          |           |     0. |
 |   |     10 | SW42/2014   | Jelena     Ilić        |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
@@ -30,14 +30,14 @@
 |   |     24 | SW47/2014   | Ana        Rudić       |     90 |   69.00 |       100 |         |     64.750 |          |           |  64.75 |
 |   |     25 | SW48/2014   | Novak      Marin       |     80 |   46.00 |       100 |         |     56.500 |          |           |   56.5 |
 |   |     26 | SW50/2014   | Vanja      Zorić       |     80 |   69.00 |       100 |         |     62.250 |          |           |  62.25 |
-|   |     27 | SW60/2014   | Dušan      Dudarin     |     30 |   46.00 |       100 |         |     44.000 |          |           |    44. |
+|   |     27 | SW60/2014   | Dušan      Dudarin     |     30 |   46.00 |       100 |      70 |     61.500 |          |           |   61.5 |
 |   |     28 | SW17/2014   | Sandra     Rajanović   |     80 |   69.00 |       100 |         |     62.250 |          |           |  62.25 |
 |   |     29 | SW27/2014   | Nikolina   Radičić     |    100 |   80.50 |       100 |         |     70.125 |          |           | 70.125 |
 |   |     30 | SW38/2014   | Tatjana    Zdravković  |     80 |   23.00 |       100 |         |     50.750 |          |           |  50.75 |
 |   |     31 | SW89/2016   | Uroš       Jovanović   |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
-|   |     32 | SW5/2014    | Stefan     Colić       |     90 |   69.00 |       100 |         |     64.750 |          |           |  64.75 |
-|   |     33 | SW15/2014   | Ognjen     Vlajić      |    100 |   80.50 |       100 |         |     70.125 |          |           | 70.125 |
-|   |     34 | SW21/2014   | Tomislav   Dobrički    |     90 |     100 |       100 |         |     72.500 |          |           |   72.5 |
+|   |     32 | SW5/2014    | Stefan     Colić       |     90 |   69.00 |       100 |      90 |     87.250 |          |           |  87.25 |
+|   |     33 | SW15/2014   | Ognjen     Vlajić      |    100 |   80.50 |       100 |     100 |     95.125 |          |           | 95.125 |
+|   |     34 | SW21/2014   | Tomislav   Dobrički    |     90 |     100 |       100 |     100 |     97.500 |          |           |   97.5 |
 |   |     35 | SW53/2014   | Milan      Šalić       |    100 |   80.50 |       100 |         |     70.125 |          |           | 70.125 |
 |   |     36 | SW61/2015   | Stefan     Plazić      |        |         |           |         |      0.000 |          |           |     0. |
 |   |     37 | SW61/2014   | Mladen     Stajčić     |        |    0.00 |           |         |      0.000 |          |           |     0. |
@@ -47,19 +47,19 @@
 |   |     41 | SW16/2014   | Monika     Erdeg       |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
 |   |     42 | SW26/2014   | Sara       Perić       |    100 |   80.50 |       100 |         |     70.125 |          |           | 70.125 |
 |   |     43 | SW29/2014   | Miloš      Pavlić      |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
-|   |     44 | SW85/2017   | Aleksandar Đurić       |     90 |   69.00 |       100 |         |     64.750 |          |           |  64.75 |
-|   |     45 | SW86/2017   | Dara       Jovanović   |     70 |   80.50 |       100 |         |     62.625 |          |           | 62.625 |
-|   |     46 | SW90/2017   | Milica     Lazić       |    100 |   46.00 |       100 |         |     61.500 |          |           |   61.5 |
-|   |     47 | SW91/2017   | Nemanja    Đuričić     |     80 |   23.00 |     66.66 |         |     42.415 |          |           | 42.415 |
-|   |     48 | SW2/2014    | Noemi      Sabadoš     |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
-|   |     49 | SW20/2014   | Nevena     Đerić       |    100 |   80.50 |       100 |         |     70.125 |          |           | 70.125 |
+|   |     44 | SW85/2017   | Aleksandar Đurić       |     90 |   69.00 |       100 |     100 |     89.750 |          |           |  89.75 |
+|   |     45 | SW86/2017   | Dara       Jovanović   |     70 |   80.50 |       100 |     100 |     87.625 |          |           | 87.625 |
+|   |     46 | SW90/2017   | Milica     Lazić       |    100 |   46.00 |       100 |     100 |     86.500 |          |           |   86.5 |
+|   |     47 | SW91/2017   | Nemanja    Đuričić     |     80 |   23.00 |     66.66 |      90 |     64.915 |          |           | 64.915 |
+|   |     48 | SW2/2014    | Noemi      Sabadoš     |    100 |   69.00 |       100 |     100 |     92.250 |          |           |  92.25 |
+|   |     49 | SW20/2014   | Nevena     Đerić       |    100 |   80.50 |       100 |     100 |     95.125 |          |           | 95.125 |
 |   |     50 | SW18/2014   | Radoš      Aćimović    |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
 |   |     51 | SW43/2014   | Nevena     Lazarević   |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
 |   |     52 | SW44/2014   | Sreten     Stokić      |    100 |   46.00 |       100 |         |     61.500 |          |           |   61.5 |
 |   |     53 | SW96/2016   | Filip      Jablanović  |     80 |   69.00 |       100 |         |     62.250 |          |           |  62.25 |
 |   |     54 | SW36/2014   | Natalija   Bogdanović  |        |         |           |         |      0.000 |          |           |     0. |
-|   |     55 | SW3/2014    | Andreja    Isaković    |     90 |     100 |       100 |         |     72.500 |          |           |   72.5 |
-|   |     56 | SW23/2014   | Milica     Mlađenović  |     80 |   69.00 |       100 |         |     62.250 |          |           |  62.25 |
+|   |     55 | SW3/2014    | Andreja    Isaković    |     90 |     100 |       100 |     100 |     97.500 |          |           |   97.5 |
+|   |     56 | SW23/2014   | Milica     Mlađenović  |     80 |   69.00 |       100 |     100 |     87.250 |          |           |  87.25 |
 |   |     57 | SW30/2014   | Filip      Savić       |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
 |   |     58 | SW51/2014   | Aleksandar Savić       |    100 |     100 |       100 |         |     75.000 |          |           |    75. |
 |   |     59 | SW19/2014   | Stefan     Đurić       |    100 |   92.00 |       100 |         |     73.000 |          |           |    73. |
@@ -67,14 +67,14 @@
 |   |     61 | SW41/2014   | Momir      Kostić      |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
 |   |     62 | SW19/2013   | Ivan       Mihajlov    |        |         |           |         |      0.000 |          |           |     0. |
 |   |     63 | SW92/2016   | Goran      Janković    |     70 |         |           |         |     17.500 |          |           |   17.5 |
-|   |     64 | SW87/2017   | Đorđe      Ilić        |    100 |   69.00 |       100 |         |     67.250 |          |           |  67.25 |
-|   |     65 | SW88/2017   | Nikola     Đurđević    |     40 |   23.00 |       100 |         |     40.750 |          |           |  40.75 |
+|   |     64 | SW87/2017   | Đorđe      Ilić        |    100 |   69.00 |       100 |     100 |     92.250 |          |           |  92.25 |
+|   |     65 | SW88/2017   | Nikola     Đurđević    |     40 |   23.00 |       100 |     100 |     65.750 |          |           |  40.75 |
 |   |     66 | SW89/2017   | Mirjana    Lakić       |      0 |   46.00 |     66.66 |         |     28.165 |          |           | 28.165 |
-|   |     67 | SW90/2016   | Stefan     Kikanović   |     70 |   92.00 |       100 |         |     65.500 |          |           |   65.5 |
-|   |     68 | SW91/2016   | Vladislav  Milivojević |    100 |   57.50 |     66.66 |         |     56.040 |          |           |  56.04 |
+|   |     67 | SW90/2016   | Stefan     Kikanović   |     70 |   92.00 |       100 |     100 |     90.500 |          |           |   90.5 |
+|   |     68 | SW91/2016   | Vladislav  Milivojević |    100 |   57.50 |     66.66 |     100 |     81.040 |          |           |  81.04 |
 |   |     69 | SW93/2016   | Novica     Nikolić     |        |         |           |         |      0.000 |          |           |     0. |
 |   |     70 | SW49/2013   | Ivan       Vujić       |        |   46.00 |           |         |     11.500 |          |           |   11.5 |
-|   |     71 | SW58/2013   | Branko     Karać       |     80 |   46.00 |     66.66 |         |     48.165 |          |           | 48.165 |
+|   |     71 | SW58/2013   | Branko     Karać       |     80 |   46.00 |     66.66 |     100 |     73.165 |          |           | 73.165 |
 |   |     72 | SW97/2016   | Jovan      Miletić     |        |         |           |         |      0.000 |          |           |     0. |
 |   |     73 | SW44/2013   | Injac      Branko      |        |         |           |         |      0.000 |          |           |     0. |
 |   |     74 | SW54/2013   | Milović    Aleksa      |     40 |         |           |         |     10.000 |          |           |    10. |
@@ -82,20 +82,20 @@
 |   |     76 | SW64/2014   | Dunja      Krga        |        |         |           |         |      0.000 |          |           |     0. |
 |   |     77 | SW37/2013   | Katarina   Cerović     |        |         |           |         |      0.000 |          |           |     0. |
 |   |     78 | SW59/2013   | Nikola Dakić           |     60 |   69.00 |     66.66 |         |     48.915 |          |           | 48.915 |
-|   |     79 | SL25/2014   | Jovica Mitrović        |     60 |   23.00 |     66.66 |         |     37.415 |          |           | 37.415 |
-|   |     80 | SL8/2014    | Danka Vasić            |     50 |   46.00 |     66.66 |         |     40.665 |          |           | 40.665 |
-|   |     81 | SL40/2014   | Jelena Popović         |    100 |   69.00 |     86.66 |         |     63.915 |          |           | 63.915 |
+|   |     79 | SL25/2014   | Jovica Mitrović        |     60 |   23.00 |     66.66 |     100 |     62.415 |          |           | 62.415 |
+|   |     80 | SL8/2014    | Danka Vasić            |     50 |   46.00 |     66.66 |     100 |     65.665 |          |           | 65.665 |
+|   |     81 | SL40/2014   | Jelena Popović         |    100 |   69.00 |     86.66 |     100 |     88.915 |          |           | 88.915 |
 |   |     82 | SW41/2013   | Miljana Vinokić        |     40 |         |           |         |     10.000 |          |           |    10. |
-|   |     83 | ???         | Vuk Vladisavljević     |     80 |   92.00 |       100 |         |     68.000 |          |           |    68. |
-|   |     84 | SL10/2014   | Veljko Radić           |     60 |   69.00 |     53.33 |         |     45.583 |          |           | 45.583 |
+|   |     83 | ???         | Vuk Vladisavljević     |     80 |   92.00 |       100 |     100 |     93.000 |          |           |    93. |
+|   |     84 | SL10/2014   | Veljko Radić           |     60 |   69.00 |     53.33 |     100 |     70.582 |          |           | 70.582 |
 |   |     85 | ???         | Sandra Todorović       |     60 |   23.00 |       100 |         |     45.750 |          |           |  45.75 |
 |   |     86 | SW53/2013   | Predrag    Falčić      |        |         |           |         |      0.000 |          |           |     0. |
 | ^ | brStud |             |                        |        |         |           |         |            |          |           |        |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
-|   |        | Prosečno    |                        | 84.507 |  72.391 |    95.621 |   0.000 |     50.586 |    0.000 |           | 50.586 |
-|   |        | Položilo    | 55                     |        |         |           |         |            |          |           |        |
+|   |        | Prosečno    |                        | 84.507 |  72.391 |    95.621 |  98.276 |     58.871 |    0.000 |           | 58.580 |
+|   |        | Položilo    | 62                     |        |         |           |         |            |          |           |        |
 | ^ |        |             | polozilo               |        |         |           |         |            |          |           |        |
-|   |        | Prolaznost  | 0.640                  |        |         |           |         |            |          |           |        |
+|   |        | Prolaznost  | 0.709                  |        |         |           |         |            |          |           |        |
 #+TBLFM: @>$4=$polozilo/$brStud;%.3f::@>>>>$12=vmean(@2$12..@87$12);%.3f::@>>>>$5=vmean(@2$5..@87$5);%.3f::@>>>>$6=vmean(@2$6..@87$6);%.3f::@>>>>$7=vmean(@2$7..@87$7);%.3f::@>>>>$8=vmean(@2$8..@87$8);%.3f::@>>>>$9=vmean(@2$9..@87$9);%.3f::@>>>>$10=vmean(@2$10..@87$10);%.3f::@>>>$4=vcount(map(<if(gt(#1, 55), 1, [])>, @2$9..@87$9))::@2$2..@87$2=@# - 1::@2$9..@87$9=vsum($5..$8)/4;%.3f::@2$12..@87$12=vsum($9..$11)
 #+TBLFM: @2$6..@87$6='(ntp/mul-const $6 1.15)
 
