Popravljanje ocene Miroslav Košpić

--- a/org/colloquium/ocene_2018.org
+++ b/org/colloquium/ocene_2018.org
@@ -63,7 +63,7 @@
 |   |     57 | SW30/2014   | Filip      Savić       |    100 |   92.00 |       100 |     100 |     98.000 |          |           |    98. |
 |   |     58 | SW51/2014   | Aleksandar Savić       |    100 |     100 |       100 |     100 |    100.000 |          |           |   100. |
 |   |     59 | SW19/2014   | Stefan     Đurić       |    100 |   92.00 |       100 |     100 |     98.000 |          |           |    98. |
-|   |     60 | SW40/2014   | Miroslav   Kospić      |     50 |   92.00 |       100 |     100 |     85.500 |          |           |   85.5 |
+|   |     60 | SW40/2014   | Miroslav   Kospić      |     80 |   92.00 |       100 |     100 |     93.000 |          |           |    93. |
 |   |     61 | SW41/2014   | Momir      Kostić      |    100 |   69.00 |       100 |     100 |     92.250 |          |           |  92.25 |
 |   |     62 | SW19/2013   | Ivan       Mihajlov    |        |         |           |         |      0.000 |          |           |     0. |
 |   |     63 | SW92/2016   | Goran      Janković    |     70 |         |           |         |     17.500 |          |           |   17.5 |
@@ -92,7 +92,7 @@
 |   |     86 | SW53/2013   | Predrag    Falčić      |        |         |           |         |      0.000 |          |           |     0. |
 | ^ | brStud |             |                        |        |         |           |         |            |          |           |        |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
-|   |        | Prosečno    |                        | 84.507 |  72.391 |    95.621 |  97.462 |     69.002 |    0.000 |           | 69.002 |
+|   |        | Prosečno    |                        | 84.930 |  72.391 |    95.621 |  97.462 |     69.089 |    0.000 |           | 69.089 |
 |   |        | Položilo    | 66                     |        |         |           |         |            |          |           |        |
 | ^ |        |             | polozilo               |        |         |           |         |            |          |           |        |
 |   |        | Prolaznost  | 0.767                  |        |         |           |         |            |          |           |        |
