Ocena odbrana projekta Marija Kovacevic

--- a/org/colloquium/ocene_2018.org
+++ b/org/colloquium/ocene_2018.org
@@ -12,7 +12,7 @@
 |   |      6 | SW7/2014    | Luka       Maletin     |    100 |     100 |       100 |     100 |    100.000 |          |           |   100. |
 |   |      7 | SW25/2014   | Aleksandar Nikolić     |     90 |   92.00 |       100 |     100 |     95.500 |          |           |   95.5 |
 |   |      8 | SW28/2014   | Nemanja    Brzak       |     80 |   46.00 |       100 |      80 |     76.500 |          |           |   76.5 |
-|   |      9 | SW22/2014   | Marija     Kovačević   |        |         |           |         |      0.000 |          |           |     0. |
+|   |      9 | SW22/2014   | Marija     Kovačević   |        |         |           |         |      0.000 |       95 |           |    95. |
 |   |     10 | SW42/2014   | Jelena     Ilić        |    100 |     100 |       100 |      90 |     97.500 |          |           |   97.5 |
 |   |     11 | SW45/2014   | Drago      Stevanović  |    100 |     100 |       100 |     100 |    100.000 |          |           |   100. |
 |   |     12 | SW54/2014   | David      Vuletaš     |    100 |   80.50 |       100 |     100 |     95.125 |          |           | 95.125 |
@@ -92,7 +92,7 @@
 |   |     86 | SW53/2013   | Predrag    Falčić      |        |         |           |         |      0.000 |          |           |     0. |
 | ^ | brStud |             |                        |        |         |           |         |            |          |           |        |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
-|   |        | Prosečno    |                        | 84.930 |  72.391 |    95.621 |  97.462 |     69.089 |    0.000 |           | 69.089 |
+|   |        | Prosečno    |                        | 84.930 |  72.391 |    95.621 |  97.462 |     69.089 |   95.000 |           | 70.194 |
 |   |        | Položilo    | 66                     |        |         |           |         |            |          |           |        |
 | ^ |        |             | polozilo               |        |         |           |         |            |          |           |        |
 |   |        | Prolaznost  | 0.767                  |        |         |           |         |            |          |           |        |
